# dicom_cpp

./: CMakeLists.txt  start.bat
src/: PrintSCP.cpp  PrintSCP.h  main.cpp
